# YOLOX_OBB

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  setup.py
configs/datasets/: QZBPlane.yaml  QZBShip.yaml  coco.yaml  dota10.yaml  dota20.yaml  fair1m1_0.yaml  fair1m2_0.yaml  fire.yaml  voc.yaml
configs/losses/: boxinst_losses.yaml  condinst_losses.yaml  sparseinst_losses.yaml  yolov5_losses.yaml  yolox_losses.yaml  yolox_losses_kld.yaml  yolox_losses_obb.yaml
configs/modules/: boxinst_darknet.yaml  boxinst_darknet_simplify.yaml  condinst_darknet.yaml  condinst_darknet_simplify.yaml  sparseinst_darknet.yaml  sparseinst_darknet_s.yaml  sparseinst_darknet_simplify.yaml  sparseinst_resnet.yaml  yolov5s.yaml  yoloxs.yaml  yoloxs_obb.yaml  yoloxs_simplify.yaml
datasets/data_convert_tools/: coco2dota.py  labelme2dota.py  rotated_adjust.py  trainval_split.py
datasets/data_convert_tools/utils/: convert_utils.py  file_utils.py
demo/OBB/: README.md
demo/OBB/DOTA2_0/: CMakeLists.txt
demo/OBB/DOTA2_0/include/: yolox_obb.h
demo/OBB/DOTA2_0/src/: yolox_obb.cpp
demo/OBB/ncnn/: CMakeLists.txt  README.md  main.cc  obb_nms.hpp
demo/OBB/tensorrt/: CMakeLists.txt
demo/OBB/tensorrt/include/: yolox_obb.h
demo/OBB/tensorrt/src/: obb_nms.cpp  yolox_obb.cpp
demo/OBB/yolox_obb/src/: obb_nms.cpp  yolox_obb.cpp
demo/ONNXRuntime/: onnx_inference.py
exps/default/: yolov5_s.py
exps/example/custom/: nano.py  yolox_s.py
exps/example/yolox_inst/: yolox_s_boxinst_coco.py  yolox_s_condinst_coco.py  yolox_s_sparseinst_coco.py
exps/example/yolox_obb/: yolox_s_dota1_0.py  yolox_s_dota1_0_deploy.py  yolox_s_dota1_0_sp.py  yolox_s_dota1_0_test.py  yolox_s_dota2_0.py  yolox_s_dota2_0_kld.py
exps/example/yolox_voc/: yolox_voc_s.py
my_exps/: coco2dota.sh  demo.sh  demo_dota_obb.sh  deploy.sh  eval.sh  eval_dota_obb.sh  eval_obb.sh  labelme2dota.sh  rotated_adjust.sh  split_image.sh  tensorboard.sh  train.sh  train_dota_obb.sh  trainval_split.sh  trt_convert.sh
my_exps/ckpt_convert/: sparseinst_resnet_convert.py
tools/: demo.py  eval.py  export_deploy.py  export_depoly.py  test.py  train.py
tools/debug/: test.py
yolox/core/: trainer.py
yolox/data/: __init__.py  data_augment.py  data_prefetcher.py  dataloading.py  samplers.py
yolox/data/datasets/: __init__.py  coco.py  coco_instance.py  datasets_wrapper.py  dota.py  mosaicdetection.py  voc.py
yolox/evaluators/: __init__.py  coco_evaluator.py  dota_eval.py  dota_evaluator.py  voc_evaluator.py
yolox/exp/: __init__.py  base_exp.py  build.py  yolox_base.py  yolox_mask_base.py  yolox_obb_base.py
yolox/models/: __init__.py  model.py  parse_model.py
yolox/models/activations/: common.py
yolox/models/losses/: __init__.py  common_losses.py  kld_loss.py  poly_iou_loss.py
yolox/models/modules/: __init__.py  block.py  common.py  export.py  init_functions.py  special.py
yolox/ops/: __init__.py  misc.py
yolox/ops/onnxruntime/: __init__.py  onnxruntime.py
yolox/ops/pytorch/: __init__.py  onnx_utils.py
yolox/utils/: __init__.py  anchor_utils.py  argparse_utils.py  boxes.py  depoly_utils.py  dist.py  file_utils.py  lr_scheduler.py  mask_utils.py  model_utils.py  obb_utils.py  predictor_utils.py  visualize.py
(+24 files in other folders)
